Modificacion de enlaces Imagenes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,17 +25,17 @@
   <body>
     <header id="header" class="paralax">
 
-      <img src="./assets/fondo.png" alt="fondo" id="fondo">
+      <img src="assets/fondo.png" alt="fondo" id="fondo">
 
-      <img src="./assets//izquierda.png" alt="izquierda" id="izquierda">
+      <img src="assets//izquierda.png" alt="izquierda" id="izquierda">
 
-      <img src="./assets//derecha.png" alt="derecha" id="derecha">
+      <img src="assets//derecha.png" alt="derecha" id="derecha">
 
-      <img src="./assets//cartel.png" alt="cartel" id="cartel">
+      <img src="assets//cartel.png" alt="cartel" id="cartel">
 
-      <img src="./assets//hombre.png" alt="hombre" id="hombre">
+      <img src="assets//hombre.png" alt="hombre" id="hombre">
 
-      <img src="./assets//mujer.png" alt="mujer" id="mujer">
+      <img src="assets//mujer.png" alt="mujer" id="mujer">
     
     </header>
     <main>
