Barra de Navegacion

--- a/index.html
+++ b/index.html
@@ -21,27 +21,114 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
 
   </head>
-<body>
   <body>
-    <header id="header" class="paralax">
+    <header>
+      <div class="paralax">
+        <img src="assets/fondo.png" alt="fondo" id="fondo">
 
-      <img src="assets/fondo.png" alt="fondo" id="fondo">
+        <img src="assets//izquierda.png" alt="izquierda" id="izquierda">
 
-      <img src="assets//izquierda.png" alt="izquierda" id="izquierda">
+        <img src="assets//derecha.png" alt="derecha" id="derecha">
 
-      <img src="assets//derecha.png" alt="derecha" id="derecha">
+        <img src="assets//cartel.png" alt="cartel" id="cartel">
 
-      <img src="assets//cartel.png" alt="cartel" id="cartel">
+        <img src="assets//hombre.png" alt="hombre" id="hombre">
 
-      <img src="assets//hombre.png" alt="hombre" id="hombre">
-
-      <img src="assets//mujer.png" alt="mujer" id="mujer">
-    
+        <img src="assets//mujer.png" alt="mujer" id="mujer">
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+          <!--Logo-->
+          <a class="navbar-brand" href="#"><img class="img-fluid" src="assets/Logo.png" alt="Logo" width="50"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!--Items-->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown sub"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
+                <li class="nav-item dropdown sub">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tu plan</a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item text-start" href="pages/plans.html">Personal Trainer</a></li>
+                    <li><a class="dropdown-item text-start" href="pages/plans.html">Entrenamiento Grupal</a></li>
+                    <li><a class="dropdown-item text-start" href="pages/plans.html">A Distancia</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item text-start" href="pages/plans.html">Plan Nutricional</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown sub"><a class="nav-link active" aria-current="page" href="pages/gallery.html">Galeria</a></li>
+                <li class="nav-item dropdown sub">
+                  <a class="nav-link dropdown-toggle position-relative" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop
+                    <span class="position-absolute bottom-10 start-100 translate-middle badge rounded-pill bg-secondary">2 <span class="visually-hidden"></span></span></a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item text-start" href="pages/shop.html">Tienda</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item position-relative text-start" href="#">Carrito
+                      <span class="position-absolute bottom-0 start-0 translate-middle badge rounded-pill bg-secondary">2 <span class="visually-hidden"></span></span></a></li>
+                    <li><a class="dropdown-item text-start" href="#">Vaciar</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown sub mx-2"><a class="nav-link active" aria-current="page" href="pages/contact.html">Contacto</a></li>
+            </ul>
+            <div class="d-flex align-items-center">
+              <!--Login-->
+              <ul class="navbar-nav">
+                <li class="dropdown">
+                  <a class="dropdown-toggle d-flex align-items-center hidden-arrow m-3" href="#" id="avatarLogin" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <img src="assets/login.png" class="rounded-circle" height="25px" alt="Avatar" loading="lazy"/></a>
+                  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="avatarLogin">
+                    <li><a class="dropdown-item text-start" href="#">Mi Perfil</a></li>
+                    <li><a class="dropdown-item text-start" href="#">Configuraciones</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item text-start" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Ingresar</a></li>
+                    <li><a class="dropdown-item text-start" href="pages/registration.html">Registrarme</a></li>
+                    <li><a class="dropdown-item text-start" href="#">Salir</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Modal Login-->
+        <div class="modal fade p-0" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <p class="modal-title w-100 text-center" id="staticBackdropLabel"><img class="img-fluid" src="assets/Logo_b.png" alt="" width="100"></p>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <!--Form Login-->
+                  <form class="row g-3 justify-content-center">
+                      <div class="col-md-6 text-start">
+                        <label for="inputEmail4" class="form-label">Email</label>
+                        <input type="email" class="form-control formLogin" id="inputEmail4">
+                      </div>
+                      <div class="col-md-6 text-start">
+                        <label for="inputPassword4" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control formLogin" id="inputPassword4">
+                      </div>
+                      <div class="col-md-12 mt-3 text-start">
+                          <div class="form-check form-switch form-check mb-3 text-start">
+                              <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
+                              <label class="form-check-label" for="flexSwitchCheckDefault">Recordar mi Email y Contraseña.</label>
+                          </div>
+                      </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                  <button type="button" class="btn btn-primary">Ingresar</button>
+                </div>
+              </div>
+            </div>
+        </div>
+      </nav>
     </header>
     <main>
       <section>
         <h1 class="titulo">MB Personal Trainer</h1>
-        <h3>ahora</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, suscipit quam, veniam esse cupiditate illo dolorum, voluptatem consequatur fugiat alias molestias deserunt eum! Atque debitis quos optio, at doloremque sunt!</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis tenetur fuga in dolorum maxime adipisci a eligendi aperiam, esse, non asperiores excepturi nesciunt libero delectus praesentium at ab deserunt provident.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, suscipit quam, veniam esse cupiditate illo dolorum, voluptatem consequatur fugiat alias molestias deserunt eum! Atque debitis quos optio, at doloremque sunt!</p>
@@ -54,5 +141,5 @@
     </main>
     <script src="./js/paralax.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
